[gd_scene load_steps=6 format=3 uid="uid://net_player_v1"]

[ext_resource type="Script" path="res://source/common/gameplay/characters/player/net_player.gd" id="1_script"]
[ext_resource type="Script" path="res://source/client/local_player/gesture_manager.gd" id="2_gesture"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_body"]
radius = 0.4
height = 1.8

[sub_resource type="BoxMesh" id="BoxMesh_visual"]
size = Vector3(0.8, 1.8, 0.8)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_input"]
properties/0/path = NodePath(".:input_dir")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:input_jump")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:cam_rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_server"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:velocity")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:skin_id")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="NetPlayer" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_script")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_body")

[node name="Visuals" type="Node3D" parent="."]

[node name="CharacterModel" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("BoxMesh_visual")

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
rotation = Vector3(-0.4, 0, 0)
spring_length = 6.0
margin = 0.2

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_input")

[node name="ServerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_server")

[node name="GestureManager" type="Node" parent="."]
script = ExtResource("2_gesture")
